# sciflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build_exe.py  pyproject.toml  run.py  sciflow_creative.html
.trae/rules/: project_rules.md
.trae/specs/sciflow/: checklist.md  spec.md  tasks.md
sci_flow/: __init__.py  __main__.py  cli.py  config.py  lark.py  literature.py  pipeline.py  python.py  word.py  zotero.py
sci_flow/core/: __init__.py  config.py  database.py  generator.py  literature.py  models.py  workflow.py
sci_flow/desktop/: __init__.py  launcher.py
sci_flow/llm/: __init__.py  client.py
sci_flow/server/: __init__.py  app.py
sci_flow/web/: index.html
